[package]
name = "rs_abieos_gf"
version = "0.1.6"
edition = "2021"
build = "build.rs"
authors = ["Igor Lins e Silva","Andrei Levchenko"]
license = "MIT"
repository = "https://github.com/cheburashkalev/rs-abieos"
description = """
A Rust wrapper library for Abieos, used for Antelope (former EOSIO) ABI serialization and deserialization.
"""
categories = ["encoding", "parsing"]
keywords = ["eosio", "antelope", "abi", "serialization", "deserialization"]

[[bin]]
name = "rs_abieos_gf"
path = "bin-src/main.rs"
doc = false

[build-dependencies]
cc = { version = "1.0.90", features = ["parallel"] }
bindgen = "0.69.4"
sys-info = "0.9.1"